--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 	padding: 10px;
 	width: 400px;
 	border-radius: 25px;
-	box-shadow: 8px 8px 5px red;
+	box-shadow: 8px 8px 8px black;
 }
 
 #glist {
