--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 
 #glist a:hover {
 	background-color: #eeeeee;
-	text-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+	text-shadow: 0 0 8px black;
 	border-radius: 25px;
 }
 
