--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,23 @@ a {
  color: black;
  text-shadow: 5px 5px 5px black;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: blue;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px black;
+  padding: 12px 16px;
+  z-index: 1;
+  border-radius: 25px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
