--- a/css/bg.css
+++ b/css/bg.css
@@ -1,5 +1,4 @@
 body {
  background-image: url("https://lexia.vercel.app/files/BG/wallpaperflare.com_wallpaper.jpg");
- margin-left: auto;
- margin-right: auto;
+ background-size: cover;
 }
