--- a/css/bg.css
+++ b/css/bg.css
@@ -1,4 +1,5 @@
 body {
  background-image: url("https://lexia.vercel.app/files/BG/wallpaperflare.com_wallpaper.jpg");
  background-size: cover;
+ text-color: white;
 }
