--- a/css/bg.css
+++ b/css/bg.css
@@ -1,5 +1,5 @@
 body {
- background-image: url("https://lexia.vercel.app/files/BG/wallpaperflare.com_wallpaper.jpg");
+ background-image: url("https://lexia.vercel.app/files/BG/LCH logo_favicon.png");
  background-size: cover;
  color: white;
 }
